feat(lifecycle): add data lifecycle erasure
